--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
@@ -75,7 +75,7 @@ https://twitter.com/acdlite/status/1631324263138443268
 
 - 🧵 [Dan Abramov - "ask me anything about React Server Components"](https://twitter.com/dan_abramov/status/1631641431742857216) + ["i need to start collecting ways to pitch react server components"](https://twitter.com/dan_abramov/status/1631885118355718144)
 - 🧵 [Andrew Clark on framework-agnostic vs well-integrated tools](https://twitter.com/acdlite/status/1632910367289491459)
-- 📜 [Common Beginner Mistakes with React](https://www.joshwcomeau.com/react/common-beginner-mistakes/): article intéractif de Josh Comeau, bonne ressource pour les débutants.
+- 📜 [Common Beginner Mistakes with React](https://www.joshwcomeau.com/react/common-beginner-mistakes/): super article intéractif de Josh Comeau, bonne ressource pour les débutants.
 - 📜 [Were React Hooks a Mistake?](https://jakelazaroff.com/words/were-react-hooks-a-mistake/)
 - 📜 [Wishlist for a React Compiler](https://electricui.com/blog/wishlist-for-a-react-compiler) + https://twitter.com/KillcoDer/status/1633100312411004928
 - 📜 [Functions Are Killing Your React App's Performance](https://unicorn-utterances.com/posts/functions-are-killing-react-performance)
