--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
@@ -79,12 +79,8 @@ Les Server Components pourraient aussi avoir des bénéfices insoupçonnés: [fa
 
 ---
 
-[Making the Case for Signals in JavaScript](https://dev.to/this-is-learning/making-the-case-for-signals-in-javascript-4c7i)
-
-https://twitter.com/RyanCarniato/status/1631733420148793344
-
----
-
+- 📜 [React vs Signals: 10 Years Later](https://dev.to/this-is-learning/react-vs-signals-10-years-later-3k71): ne manquez pas la réponse de Dan Abramov sur cet article de Ryan Carniato qui explique la vision de React. Il ne souhaite pas que la fonction d'un composant de React soit de "setup" comme SolidJS: réexécuter la fonction est volontaire.
+- 📜 [Making the Case for Signals in JavaScript](https://dev.to/this-is-learning/making-the-case-for-signals-in-javascript-4c7i): Ryan Carniato revient sur quelques bonnes raisons d'utiliser les signaux avec des arguments plutôt intéressants. Je pense aussi qu'on ne devrait pas avoir à changer l'organisation de ses composants pour des raisons de performance.
 - 📜 [Framework-defined infrastructure](https://vercel.com/blog/framework-defined-infrastructure): le CTO de Vercel explique comment l'infra s'adapte automatiquement à votre code et prend Next.js en exemple.
 - 📜 [Deno - You Don't Need a Build Step](https://deno.com/blog/you-dont-need-a-build-step): explique la complexité derrière les 4 étapes de build de Next.js (compiling, minifying, bundling, code splitting). Propose une alternative avec Fresh et son mode Just-in-time.
 - 📜 [Common Beginner Mistakes with React](https://www.joshwcomeau.com/react/common-beginner-mistakes/): super article intéractif de Josh Comeau, bonne ressource pour les débutants.
@@ -92,7 +88,6 @@ https://twitter.com/RyanCarniato/status/1631733420148793344
 - 📜 [Wishlist for a React Compiler](https://electricui.com/blog/wishlist-for-a-react-compiler) + https://twitter.com/KillcoDer/status/1633100312411004928
 - 📜 [Functions Are Killing Your React App's Performance](https://unicorn-utterances.com/posts/functions-are-killing-react-performance)
 - 📜 [Sentry’s Frontend Tests: Migrating from Enzyme to React Testing Library](https://blog.sentry.io/2023/02/23/sentrys-frontend-tests-migrating-from-enzyme-to-react-testing-library/)
-- 📜 [React vs Signals: 10 Years Later](https://dev.to/this-is-learning/react-vs-signals-10-years-later-3k71) + https://twitter.com/dan_abramov/status/1631061136727482377
 - 📜 [Prop drilling and component composition in React](https://alexsidorenko.com/blog/react-prop-drilling-composition/) + https://twitter.com/asidorenko_/status/1631238830123565056
 - 📜 [React’s Upcoming Compiler Only Solves Part Of The Problem](https://www.builder.io/blog/react-compiler-will-not-solve-prop-drilling) + https://twitter.com/mhevery/status/1631350529682014208
 - 📦 [Remix 1.14](https://twitter.com/kentcdodds/status/1631059357654818819): Hot Module Replacement and Hot Data Revalidation
