--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
@@ -81,22 +81,22 @@ Les Server Components pourraient aussi avoir des bénéfices insoupçonnés: [fa
 
 - 📜 [React vs Signals: 10 Years Later](https://dev.to/this-is-learning/react-vs-signals-10-years-later-3k71): ne manquez pas la réponse de Dan Abramov sur cet article de Ryan Carniato qui explique la vision de React. Il ne souhaite pas que la fonction d'un composant de React soit de "setup" comme SolidJS: réexécuter la fonction est volontaire.
 - 📜 [Making the Case for Signals in JavaScript](https://dev.to/this-is-learning/making-the-case-for-signals-in-javascript-4c7i): Ryan Carniato revient sur quelques bonnes raisons d'utiliser les signaux avec des arguments plutôt intéressants. Je pense aussi qu'on ne devrait pas avoir à changer l'organisation de ses composants pour des raisons de performance.
+- 📜 [React’s Upcoming Compiler Only Solves Part Of The Problem](https://www.builder.io/blog/react-compiler-will-not-solve-prop-drilling): explique pourquoi le compiler React Forget ne résoudra pas les re-rendus intermédiaires, à l'instar des signaux
+- 📜 [Were React Hooks a Mistake?](https://jakelazaroff.com/words/were-react-hooks-a-mistake/): Jake explique les problèmes introduits par les hooks, et en quoi les signaux ressemblent à l'ancien modèle React basé sur des class components.
 - 📜 [Framework-defined infrastructure](https://vercel.com/blog/framework-defined-infrastructure): le CTO de Vercel explique comment l'infra s'adapte automatiquement à votre code et prend Next.js en exemple.
 - 📜 [Deno - You Don't Need a Build Step](https://deno.com/blog/you-dont-need-a-build-step): explique la complexité derrière les 4 étapes de build de Next.js (compiling, minifying, bundling, code splitting). Propose une alternative avec Fresh et son mode Just-in-time.
 - 📜 [Common Beginner Mistakes with React](https://www.joshwcomeau.com/react/common-beginner-mistakes/): super article intéractif de Josh Comeau, bonne ressource pour les débutants.
-- 📜 [Were React Hooks a Mistake?](https://jakelazaroff.com/words/were-react-hooks-a-mistake/)
-- 📜 [Wishlist for a React Compiler](https://electricui.com/blog/wishlist-for-a-react-compiler) + https://twitter.com/KillcoDer/status/1633100312411004928
-- 📜 [Functions Are Killing Your React App's Performance](https://unicorn-utterances.com/posts/functions-are-killing-react-performance)
+- 📜 [Wishlist for a React Compiler](https://electricui.com/blog/wishlist-for-a-react-compiler): Michael explique ce qu'il aimerait que le compiler React-Forget fasse, illustré par de nombreux exemples avant/après compilation.
+- 📜 [Benchmarking Preact Signals versus the React alternatives](https://electricui.com/blog/benchmarking-preact-signals)
 - 📜 [Sentry’s Frontend Tests: Migrating from Enzyme to React Testing Library](https://blog.sentry.io/2023/02/23/sentrys-frontend-tests-migrating-from-enzyme-to-react-testing-library/)
-- 📜 [Prop drilling and component composition in React](https://alexsidorenko.com/blog/react-prop-drilling-composition/) + https://twitter.com/asidorenko_/status/1631238830123565056
-- 📜 [React’s Upcoming Compiler Only Solves Part Of The Problem](https://www.builder.io/blog/react-compiler-will-not-solve-prop-drilling) + https://twitter.com/mhevery/status/1631350529682014208
-- 📦 [Remix 1.14](https://twitter.com/kentcdodds/status/1631059357654818819): Hot Module Replacement and Hot Data Revalidation
-- 📦 [Introducing Signia - Scalable signals for TypeScript](https://tldraw.substack.com/p/introducing-signia) + https://twitter.com/tldraw/status/1631354471275016192
+- 📜 [Prop drilling and component composition in React](https://alexsidorenko.com/blog/react-prop-drilling-composition/)
 - 🎨 ["Thinking in React" visualized](https://twitter.com/asidorenko_/status/1631967645376315400)
-- 📦 [preact-reconciliers](https://github.com/CodyJasonBennett/preact-reconciler) + https://twitter.com/Cody_J_Bennett/status/1632674026408558592 + https://twitter.com/Cody_J_Bennett/status/1633063536158023680
-- 📦 [Remix + Fastly support](https://twitter.com/FastlyDevs/status/1631031583523192832): nouveau server adapter pour Remix
 - 🎥 [React Is A Backend Framework Now](https://www.youtube.com/watch?v=EhI6wb5nEEs)
 - 🎥 [Rebuilding Jotai State Manager for React in 20 Minutes!](https://www.youtube.com/watch?v=gg31JTZmFUw)
+- 📦 [preact-reconciliers](https://github.com/CodyJasonBennett/preact-reconciler): un package pour créer des custom renderers Preact. Cody fait tourner [React-Three-Fiber + Preact](https://twitter.com/Cody_J_Bennett/status/1632674026408558592).
+- 📦 [Remix 1.14](https://twitter.com/kentcdodds/status/1631059357654818819): Hot Module Replacement + Hot Data Revalidation.
+- 📦 [Signia - Scalable signals for TypeScript](https://tldraw.substack.com/p/introducing-signia): nouvelle lib de signaux avec binding React.
+- 📦 [Remix + Fastly support](https://twitter.com/FastlyDevs/status/1631031583523192832): nouveau server adapter pour Remix
 - 📦 [Mantine 6.0](https://mantine.dev/changelog/6-0-0/)
 - 📦 [storybook-docusaurus](https://github.com/jodyheavener/storybook-docusaurus)
 
