--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
@@ -118,22 +118,17 @@ Vous pouvez également **analyser les résultats des sondages** dans des tableau
 
 ## 📱 React-Native {#react-native}
 
-[I made JSON.parse() 2x faster](https://radex.io/react-native/json-parse/)
-
-https://twitter.com/radexp/status/1631999486456213504
-
----
-
+- 👀 [Code elimination for React Native apps demo](https://twitter.com/Baconbrix/status/1631749459389431808): future fonctionnalité sur le CLI Expo pour vous dire quel code natif votre app n'utilise pas et peut être retiré.
 - 👀 [React Native will soon be a Monorepo](https://twitter.com/o_kwasniewski/status/1631292628217266176)
-- 👀 [Code elimination for React Native apps demo](https://twitter.com/Baconbrix/status/1631749459389431808)
+- 📜 [I made JSON.parse() 2x faster](https://radex.io/react-native/json-parse/): Radex propose d'améliorer les performances d'Hermes en utilisant des libs C++ très rapides basées sur des [instructions SIMD](https://en.wikipedia.org/wiki/Single_instruction,_multiple_data). Intéressant à lire même si on ne fait pas de React-Native. Discussions en cours sur la [PR Hermes](https://github.com/facebook/hermes/issues/811).
 - 📜 [Top Ten Reasons to go to Chain React](https://shift.infinite.red/top-ten-reasons-to-go-to-chain-react-665a93883e4f)
-- 🔗 [React Native Hitchhiker's Guide](https://twitter.com/ospfranco/status/1631984862474248193)
+- 🔗 [React Native Hitchhiker's Guide](https://twitter.com/ospfranco/status/1631984862474248193): Oscar partage sa base de connaissance React-Native. De nombreux sujets avancés, dont pas mal liés à JSI.
 - 🎙️ [RNR 261 - What’s the deal with EAS?](https://reactnativeradio.com/episodes/rnr-261-whats-the-deal-with-eas)
 - 🎥 [Riveo Page Curl - “Can it be done in React Native?”](https://www.youtube.com/watch?v=xNZCQvtnhIU)
 - 📦 [Expo Router 1.2](https://twitter.com/Baconbrix/status/1630969201421582341)
 - 📦 [React-Native-Replicache](https://github.com/Braden1996/react-native-replicache/)
 - 📦 [VisionCamera Realtime Object Detection with TensorFlow Lite](https://github.com/jaroslawkrol/vision-camera-realtime-object-detection) - [demo](https://twitter.com/mrousavy/status/1631269105796886528)
-- 📦 [react-native-graph 1.0](https://github.com/margelo/react-native-graph)
+- 📦 [React-Native-Graph 1.0](https://github.com/margelo/react-native-graph/releases/tag/v1.0.1): version stable pour la lib de graphe de chez Margelo basée sur Skia.
 
 ## 🧑‍💻 Jobs {#jobs}
 
@@ -161,22 +156,21 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 ## 🇫🇷 En français {#fr}
 
-- [Les types en React TypeScript : la clé pour un code plus robuste](https://www.youtube.com/watch?v=pTw4Fr4vLrY)
-- [Le guide complet de SSR et CSR pour débutants](https://www.youtube.com/watch?v=KHRwgK2dnFc)
+- 🎥 [Les types en React TypeScript : la clé pour un code plus robuste](https://www.youtube.com/watch?v=pTw4Fr4vLrY)
+- 🎥 [Le guide complet de SSR et CSR pour débutants](https://www.youtube.com/watch?v=KHRwgK2dnFc)
+- 🧑‍🎓 [NextReact](https://codelynx.dev/nextreact): nouveau cours React moderne en français
 
-  💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
+💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
 ---
 
 ## 🔀 Autre {#other}
 
+- [Tether elements to each other with CSS anchor positioning](https://developer.chrome.com/blog/tether-elements-to-each-other-with-css-anchor-positioning/): feature CSS draft qui pourrait remplacer les libs de positionnement comme Popper, Floating-UI ou Tether.
 - [TypeScript 5.0 RC](https://devblogs.microsoft.com/typescript/announcing-typescript-5-0-rc/)
 - [ArkType Isomorphic types for TS/JS](https://github.com/arktypeio/arktype)
 - [Zod 3.21](https://twitter.com/colinhacks/status/1632472849960280064)
 - [JavaScript Import maps, Part 2: In-Depth Exploration](https://spidermonkey.dev/blog/2023/03/02/javascript-import-maps-part-2-in-depth-exploration.html)
-- [Tether elements to each other with CSS anchor positioning](https://developer.chrome.com/blog/tether-elements-to-each-other-with-css-anchor-positioning/)
 - [Can WebAssembly Solve Serverless’s Problems?](https://thenewstack.io/can-webassembly-solve-serverless-problems/)
 - [Experiments with the JavaScript Garbage Collector](https://dev.to/codux/experiments-with-the-javascript-garbage-collector-2ae3)
 - [Drizzle ORM - TypeScript ORM for SQL](https://github.com/drizzle-team/drizzle-orm)
