--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
@@ -125,10 +125,10 @@ Vous pouvez également **analyser les résultats des sondages** dans des tableau
 - 🔗 [React Native Hitchhiker's Guide](https://twitter.com/ospfranco/status/1631984862474248193): Oscar partage sa base de connaissance React-Native. De nombreux sujets avancés, dont pas mal liés à JSI.
 - 🎙️ [RNR 261 - What’s the deal with EAS?](https://reactnativeradio.com/episodes/rnr-261-whats-the-deal-with-eas)
 - 🎥 [Riveo Page Curl - “Can it be done in React Native?”](https://www.youtube.com/watch?v=xNZCQvtnhIU)
+- 📦 [React-Native-Graph 1.0](https://github.com/margelo/react-native-graph/releases/tag/v1.0.1): version stable pour la lib de graphe de chez Margelo basée sur Skia.
 - 📦 [Expo Router 1.2](https://twitter.com/Baconbrix/status/1630969201421582341)
 - 📦 [React-Native-Replicache](https://github.com/Braden1996/react-native-replicache/)
 - 📦 [VisionCamera Realtime Object Detection with TensorFlow Lite](https://github.com/jaroslawkrol/vision-camera-realtime-object-detection) - [demo](https://twitter.com/mrousavy/status/1631269105796886528)
-- 📦 [React-Native-Graph 1.0](https://github.com/margelo/react-native-graph/releases/tag/v1.0.1): version stable pour la lib de graphe de chez Margelo basée sur Skia.
 
 ## 🧑‍💻 Jobs {#jobs}
 
@@ -168,8 +168,8 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 - [Tether elements to each other with CSS anchor positioning](https://developer.chrome.com/blog/tether-elements-to-each-other-with-css-anchor-positioning/): feature CSS draft qui pourrait remplacer les libs de positionnement comme Popper, Floating-UI ou Tether.
 - [TypeScript 5.0 RC](https://devblogs.microsoft.com/typescript/announcing-typescript-5-0-rc/)
-- [ArkType Isomorphic types for TS/JS](https://github.com/arktypeio/arktype)
 - [Zod 3.21](https://twitter.com/colinhacks/status/1632472849960280064)
+- [ArkType Isomorphic types for TS/JS](https://github.com/arktypeio/arktype)
 - [JavaScript Import maps, Part 2: In-Depth Exploration](https://spidermonkey.dev/blog/2023/03/02/javascript-import-maps-part-2-in-depth-exploration.html)
 - [Can WebAssembly Solve Serverless’s Problems?](https://thenewstack.io/can-webassembly-solve-serverless-problems/)
 - [Experiments with the JavaScript Garbage Collector](https://dev.to/codux/experiments-with-the-javascript-garbage-collector-2ae3)
@@ -191,14 +191,16 @@ https://twitter.com/housecor/status/1631296202409902086
 
 https://twitter.com/jarredsumner/status/1631176004655013891
 
-https://twitter.com/jamonholmgren/status/1631002581471465474
+https://twitter.com/trevorcoleman/status/1630993930111123457
 
-https://twitter.com/trashh_dev/status/1631011515892654080
+https://twitter.com/jaredpalmer/status/1630545482811338752
 
 https://twitter.com/mlrawlings/status/1630948865711960066
 
 https://twitter.com/jamonholmgren/status/1633184883781828608
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
+[![alt](/emails/issues/137/meme.jpg)](https://twitter.com/potetotes/status/1631401117186764803)
+
+🤣 [Les tweets marrant de la semaine](https://twitter.com/sebastienlorber/status/1633443251955875840)
 
 A plus 👋
