--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
@@ -84,6 +84,7 @@ Les Server Components pourraient aussi avoir des bénéfices insoupçonnés: [fa
 - 📜 [React’s Upcoming Compiler Only Solves Part Of The Problem](https://www.builder.io/blog/react-compiler-will-not-solve-prop-drilling): explique pourquoi le compiler React Forget ne résoudra pas les re-rendus intermédiaires, à l'instar des signaux
 - 📜 [Were React Hooks a Mistake?](https://jakelazaroff.com/words/were-react-hooks-a-mistake/): Jake explique les problèmes introduits par les hooks, et en quoi les signaux ressemblent à l'ancien modèle React basé sur des class components.
 - 📜 [Framework-defined infrastructure](https://vercel.com/blog/framework-defined-infrastructure): le CTO de Vercel explique comment l'infra s'adapte automatiquement à votre code et prend Next.js en exemple.
+- 📜 [2023 Web Framework Performance Report](https://astro.build/blog/2023-web-framework-performance-report/): Fred (Astro) a analysé les données de perf réelles pour en tirer des tendances sur l'influence des frameworks sur les performances de nos apps. On y retrouve Astro, Gatsby, Remix et Next.js.
 - 📜 [Deno - You Don't Need a Build Step](https://deno.com/blog/you-dont-need-a-build-step): explique la complexité derrière les 4 étapes de build de Next.js (compiling, minifying, bundling, code splitting). Propose une alternative avec Fresh et son mode Just-in-time.
 - 📜 [Common Beginner Mistakes with React](https://www.joshwcomeau.com/react/common-beginner-mistakes/): super article intéractif de Josh Comeau, bonne ressource pour les débutants.
 - 📜 [Wishlist for a React Compiler](https://electricui.com/blog/wishlist-for-a-react-compiler): Michael explique ce qu'il aimerait que le compiler React-Forget fasse, illustré par de nombreux exemples avant/après compilation.
@@ -178,26 +179,6 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 ---
 
 ## 🤭 Fun {#fun}
-
-https://twitter.com/trashh_dev/status/1632034009642602498
-
-https://twitter.com/peterpme/status/1631689866944692225
-
-https://twitter.com/FredKSchott/status/1631449132358598656
-
-https://twitter.com/potetotes/status/1631401117186764803
-
-https://twitter.com/housecor/status/1631296202409902086
-
-https://twitter.com/jarredsumner/status/1631176004655013891
-
-https://twitter.com/trevorcoleman/status/1630993930111123457
-
-https://twitter.com/jaredpalmer/status/1630545482811338752
-
-https://twitter.com/mlrawlings/status/1630948865711960066
-
-https://twitter.com/jamonholmgren/status/1633184883781828608
 
 [![alt](/emails/issues/137/meme.jpg)](https://twitter.com/potetotes/status/1631401117186764803)
 
