--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /137
-title: "React Hebdo #137: ..."
+title: "React Hebdo #137: Code Extraction, Server Components, Signals, Forget compiler, Next.js, Astro, Deno, Remix, Preact, Signia, TypeScript..."
 authors: [slorber]
 date: 03-07-2023
 image: /img/TWIR_POST.png
@@ -9,9 +9,11 @@ unlisted: true
 
 Salut à tous !
 
-Promo NextReact: https://codelynx.dev/nextreact
+Cette semaine, on retrouve encore pas mal de contenu sur les signaux, mais c'est au tour des Server Components de prendre le relais!
 
-<Todo />
+Melvyn à lancé sa formation [NextReact](https://codelynx.dev/nextreact) en français, basée sur les dernières nouveautés React, y compris les Server Components.
+
+Il ne reste plus qu'une semaine pour envoyer votre proposition de talk au CFP de [React-Native-Connection](https://reactnativeconnection.io/) (Paris - 1er Juin).
 
 <!-- truncate -->
 
