--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
@@ -10,7 +10,7 @@ Salut à tous !
 
 Cette semaine, on retrouve encore pas mal de contenu sur les signaux, mais c'est au tour des Server Components de prendre le relais!
 
-Melvyn a lancé sa formation [NextReact](https://codelynx.dev/nextreact) en français, basée sur les dernières nouveautés React, y compris les Server Components.
+Je vous propose de découvrir [NextReact](https://codelynx.dev/nextreact): nouvelle formation React en français, basée sur les dernières nouveautés React, y compris les Server Components. Tout mon soutien à Melvyn qui a eu le courage de construire sa propre plateforme de cours en utilisant les mêmes technologies que celles qu'il enseigne
 
 Il ne reste plus qu'une semaine pour envoyer votre proposition de talk au CFP de [React-Native-Connection](https://reactnativeconnection.io/) (Paris - 1er Juin).
 
