--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
@@ -95,7 +95,7 @@ Les Server Components pourraient aussi avoir des bénéfices insoupçonnés: [fa
 - 📜 [Prop drilling and component composition in React](https://alexsidorenko.com/blog/react-prop-drilling-composition/)
 - 🎨 ["Thinking in React" visualized](https://twitter.com/asidorenko_/status/1631967645376315400)
 - 🎥 [Rebuilding Jotai State Manager for React in 20 Minutes!](https://www.youtube.com/watch?v=gg31JTZmFUw)
-- 📦 [preact-reconciliers](https://github.com/CodyJasonBennett/preact-reconciler): un package pour créer des custom renderers Preact. Cody fait tourner [React-Three-Fiber + Preact](https://twitter.com/Cody_J_Bennett/status/1632674026408558592).
+- 📦 [preact-reconcilers](https://github.com/CodyJasonBennett/preact-reconciler): un package pour créer des custom renderers Preact. Cody fait tourner [React-Three-Fiber + Preact](https://twitter.com/Cody_J_Bennett/status/1632674026408558592).
 - 📦 [Remix 1.14](https://twitter.com/kentcdodds/status/1631059357654818819): Hot Module Replacement + Hot Data Revalidation.
 - 📦 [Signia - Scalable signals for TypeScript](https://tldraw.substack.com/p/introducing-signia): nouvelle lib de signaux avec binding React.
 - 📦 [Remix + Fastly support](https://twitter.com/FastlyDevs/status/1631031583523192832): nouveau server adapter pour Remix
